# ids-ai

./: .dockerignore  .env.example  .gitignore  AGENT_CONFIG.md  CLAUDE.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  Dockerfile  PHASE2.md  PROJECT_FILES_MANIFEST.md  QUICKFIX.md  QUICK_REFERENCE.md  README.md  VERIFICATION.md  data.json  debates.json  development-workflow.md  docker-compose.dev.yml  docker-compose.yml  dotenv_example  project-structure.md  pyproject.toml  sre_progressive.yaml  tech-stack.md
.github/workflows/: deploy.yml
docs/: AGENT_CONFIG.md  BUGFIX_AGENTRESPONSE.md  COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  GEMINI_MODEL_FIX.md  IMPLEMENTATION_GUIDE.md  PHASE2_SUMMARY.md  RATE_LIMIT_CONFIG.md  STORAGE_ARCHITECTURE.md  architecture-overview.md  custom-instructions.txt
ids/: __init__.py  __main__.py
ids/agents/: __init__.py  base_agent.py
ids/agents/personas/: architect_critic.md  architect_critic.yaml  architect_progressive.md  architect_progressive.yaml  developer_critic.md  developer_critic.yaml  developer_progressive.md  (+8 more)
ids/config/: settings.py  thresholds.yaml
ids/models/: __init__.py  agent.py  code_task.py  consensus.py  cross.py  project.py  session.py
ids/orchestrator/: __init__.py  code_workflow.py  consensus_builder.py  round_executor.py  session_manager.py
ids/services/: __init__.py  claude_code.py  file_manager.py  llm_client.py  prompt_loader.py  python_analyzer.py  validation_engine.py
ids/storage/: __init__.py  base.py  chroma_store.py  mongo_store.py
ids/utils/: __init__.py  conversation_export.py  logger.py
(+5 files in other folders)
